# dissertation

./: .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  HELPERS.md  README.md  __HELPERS.txt  __TODO.md  old_notes.txt  pyproject.toml  requirements.txt  requirements__.txt  tmux-cheat-sheet.md
_my/_dissertation/: list_pretrainedmodels.py
_my/_dissertation/my_hloc/: .runx  main_day_night_splitted.py  mix_results.py  run_1080.sh  run_1080Ti.sh  save_space.sh  segment.py  segment_model.py  segment_nvidia.sh  segment_nvidia_coco.sh
_my/dissertation/: .gitignore  list_pretrainedmodels.py  readme
_my/dissertation/my_hloc/: 4Seasons_run_1080.sh  4Seasons_run_1080Ti.sh  4Seasons_run_1080Ti_filtering.sh  4Seasons_run_1080Ti_filtering_specific.sh  4Seasons_run_1080_filtering.sh  TOP-DAY-NIGHT_1-tuned_hloc_with_segmentation.txt  TOP-DAY-NIGHT_2-tuned_hloc_with_segmentation.txt  TOP_NIGHT_1-superpoint_recommended-superglue_recommended_2020.12.22_16.58.46_Aachen_hloc_superpoint+superglue_netvlad50.txt  TOP_NIGHT_2-superpoint_aachen_test_5_noresize-my_superglue-2020.12.31_21.18.21_Aachen_hloc_superpoint+superglue_netvlad50.txt  aachen_run_1080.sh  aachen_run_1080Ti.sh  aachen_run_1080Ti_filtering.sh  aachen_run_1080Ti_v2.sh  aachen_run_1080_filtering.sh  aachen_v1_1_run_1080.sh  aachen_v1_1_run_1080Ti.sh  aachen_v1_1_run_1080Ti_filtering.sh  aachen_v1_1_run_1080_filtering.sh  dissertation_seg_images.py  edit_7Scenes_run_1080.sh  edit_7Scenes_run_1080Ti.sh  queue.sh  run_1080.sh  run_1080Ti.sh  tst.py  tst_h5_files.py  tst_main.py
_my/env_tests/opencv_env_test/: test.py
_my/env_tests/pytorch_test/: main.py
_my/env_tests/tensorflow_env_test/: test.py
_my/env_tests/tensorflow_test/: classification.ipynb  keras1.py  test01.py  test02.py  test03.py  test04.py  test05.py  tf_test.py  tfv2_test.py  tutorial1.py
_my/env_tests/try_webcams/: main.py
_my/experiments/exp_train/: main.py  process.py
_my/experiments_rigo/exp_train/: graphs.py  main.py  process.py
_my/experiments_rigo/get_kp_desc/: foo.py  main.py  save_data.py
_my/experiments_rigo/match_desc/: load_data.py  main.py
_my/experiments_rigo/prepare_dataset_1024/: main.py  shuffle_split_data.py
_my/experiments_rigo/remove_tunels_from_data/: main.py
_my/match_desc/: load_data.py
_my/prepare_dataset_1024/: main.py  shuffle_split_data.py
_my/pytorch_test/: main.py
_my/remove_tunels_from_data/: main.py
_my/specom2020/: calculate_H_average.py  calculate_H_manualy.py  calculate_kp_desc.py  calculate_matches.py  compare.py  generate_imgs.py  tmp.txt  torch_test.py
_my/specom2020/SuperGlue/: my_match_pairs.py  run2.sh
_my/specom2020/myutils/: load_data.py  save_data.py
_my/tensorflow_test/: csv.ipynb  test03.py  tf_test.py  tfv2_test.py
_my/tensorflow_tutorials/: keras1.py  test05.py  tutorial1.py
development_enviroment_tests/: tests.py
experiments/exp_train/: graphs.py
experiments/exp_train/outputs/: AKAZE_3_214.txt  SURF_1_234.txt
experiments/exp_train/outputs_rigo/: AKAZE_1_234.txt  ORB_1_234.txt  SIFT_2_134.txt  SIFT_4_231.txt  SURF_1_234.txt  SURF_3_214.txt
experiments/presentation/: main.py
get_kp_desc/: foo.py  load_data.py  main.py  save_data.py
match_desc/: load_data.py  main.py
opencv_test/: test.py
q_and_a/: img_res_count.py
specom/: main.py
specom2020/: calculate_H.py  calculate_kp_desc.py  calculate_kp_desc_gan.py  generate_pairs.py  match_with_superglue.py  show_kps.py  visualize_averate_H.py
specom2020/SuperGlue/: run.sh  test_matches.py
specom2020/SuperGlue/dump_match_pairs/: piazza_san_marco_58751010_4849458397_piazza_san_marco_18627786_5929294590_matches.npz  scene0711_00_frame-001680_scene0711_00_frame-001995_matches.npz  scene0713_00_frame-001320_scene0713_00_frame-002025_matches.npz  scene0721_00_frame-000375_scene0721_00_frame-002745_matches.npz  scene0737_00_frame-000930_scene0737_00_frame-001095_matches.npz  scene0752_00_frame-000075_scene0752_00_frame-001440_matches.npz  (+4 more)
specom2020/myutils/: __init__.py  load_data.py
try_webcams/: main.py
(+276 files in other folders)
