[tool.poetry]
name = "dissertation"
version = "0.2.0"
description = "Dissertation"
authors = ["Lukas Bures <lbures@kky.zcu.cz>"]

[tool.poetry.dependencies]
# source .venv/bin/activate && pip install torchvision==0.8.2+cu101 torchaudio==0.7.2 -f https://download.pytorch.org/whl/torch_stable.htm
python = ">=3.7,<3.10"
opencv-python = "^4.5.3"
tqdm = "^4.62.2"
matplotlib = "^3.4.3"
h5py = "^3.4.0"
scipy = "^1.7.1"
pycolmap = "^0.0.1"
torch = {url = "https://download.pytorch.org/whl/cu101/torch-1.7.1%2Bcu101-cp37-cp37m-linux_x86_64.whl"}
coolname = "^1.1.0"
PyYAML = "^6.0"
tabulate = "^0.8.9"
tensorboardX = "^2.4.1"
runx = "0.0.6"
scikit-image = "^0.19.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py37']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  # The following are specific to Black, you probably don't want those.
  | blib2to3
  | tests/data
  | profiling
  | datasets
)/
'''

[tool.isort]
profile = "black"
